--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <ul class="list">
                     <li><img  src="photos/c.png"><span>C</span></li>
                     <li><img  src="photos/cpp.png"><span>C++</span></li>
-                    <li><img  src="photos/HTML5.png"><span>HTML</span></li>
-                    <li><img  src="photos/css.png"><span>CSS</span></li>
+                    <li><img  src="photos/HTML5.png"><span class="morepad">HTML</span></li>
+                    <li><img  src="photos/css.png"><span class="morepad">CSS</span></li>
                 </ul>
 
              </section>
