--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <link rel="stylesheet" type="text/css" href="includes/style.css">
         <title>Or Eitan</title>
     </head>
+
     <body>
+    <div id="wrapper">
         <header>
             <a href="#"><span>Or Eitan</span></a>
         </header>
@@ -25,7 +27,7 @@
              <section>
                  <img class="cover" src="photos/left.png">
                  <img class="cover" src="photos/mid.png">
-                 <img class="cover" src="photos/right.png">
+                 <img class="coverend" src="photos/right.png">
                  <h1 class="head">Or Eitan</h1>
                  <p class="text">"42: The answer to life, the universe and everything"</p>
              </section>
@@ -42,6 +44,7 @@
              </section>
 
          </main>
+        
          <footer>
                 <ul>
                     <li><a class="SeeOurWork" href="https://github.com/oreitan?tab=repositories" target="_blank">see our work</a></li>
@@ -57,7 +60,8 @@
                     <a href="https://www.instagram.com/oreitan_photography/" target="_blank"><img src="photos/insta.png"></a>
                 </section>
          </footer>
-
+        </div>
     </body>
+    
 </html>
 
