--- a/exercises/ex3/index.html
+++ b/exercises/ex3/index.html
@@ -7,13 +7,15 @@
     <body id="layout1">
         <header>
             <nav>
-                <a href="#" target="_blank">layout 1</a>
-                <a href="layout2.html" target="_blank">layout 2</a>
-                <a href="layout3.html" target="_blank">layout 3</a>
+                <ul>
+                    <li><a href="index.html" target="_blank">MIX</a></li>
+                    <li><a href="layout2.html" target="_blank">STAIRS</a></li>
+                    <li><a href="layout3.html" target="_blank">DYNAMIC</a></li>
+                    </ul>
             </nav>
         </header>
 
-        <main>
+        <main class="wrappwr">
             <section class=" text">
                 <h1>- M I X</h1>
                 <h3> Mix layout for any creative idea </h3>
@@ -22,8 +24,20 @@
 
             <section class="boxes">
                 <div class="box1"></div>
-                <div class="box2"></div>
-                <div class="box3"></div>
+                <div class="box4"></div>
+                <div class="box5"></div>
+                <div class="box6"></div>
+                <div class="box7"></div>
+                <div class="box8"></div>
+                <div class="box9"></div>
+                <div class="box10"></div>
+                <div class="box11"></div>
+                <div class="box12"></div>
+                <div class="box13"></div>
+                <div class="box14"></div>
+                <div class="box15"></div>
+                <div class="box16"></div>
+                <div class="box17"></div>
             </section>
         </main>
         <footer>
