--- a/exercises/ex1/index.html
+++ b/exercises/ex1/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Or Eitan</title>
     </head>
+
     <body>
-        <img src="images/main.jpg" alt="the pritchett" title="the pritchett">
-        <h1>the pritchett</h1>
-        <ul>
-            <li> <a href="lily.html">Lily</a></li>
-            <li> <a href="cam.html">Cam</a></li>
-            <li> <a href="mitchal.html">Mitchal</a></li>
-        </ul>
-        <h6> &#169; Or&nbsp;&nbsp;&nbsp;&nbsp; Eitan</h6>
+        <div class="container">
+                <img src="images/main.jpg" alt="the pritchett" title="the pritchett">
+                <h1>the pritchett</h1>
+                <ul class="nav nav-pills">
+                    <li class="nav-item"> <a class="nav-link active" href="lily.html">Lily</a></li>
+                    <li class="nav-item"> <a class="nav-link" href="cam.html">Cam</a></li>
+                    <li class="nav-item"> <a class="nav-link" href="mitchal.html">Mitchal</a></li>
+                </ul>
+                <h6> &#169; Or&nbsp;&nbsp;&nbsp;&nbsp; Eitan</h6>
+        </div>
+
     </body>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </html>
