--- a/exercises/ex3/index.html
+++ b/exercises/ex3/index.html
@@ -8,7 +8,7 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="index.html" target="_blank">MIX</a></li>
+                    <li class="selectB"><a href="index.html" target="_blank">MIX</a></li>
                     <li><a href="layout2.html" target="_blank">STAIRS</a></li>
                     <li><a href="layout3.html" target="_blank">DYNAMIC</a></li>
                     </ul>
