--- a/exercises/ex3/layout2.html
+++ b/exercises/ex3/layout2.html
@@ -9,7 +9,7 @@
             <nav>
                 <ul class="wrappwr">
                     <li><a href="index.html" target="_blank">MIX</a></li>
-                    <li><a href="layout2.html" target="_blank">STAIRS</a></li>
+                    <li class="selectB"><a href="layout2.html" target="_blank">STAIRS</a></li>
                     <li><a href="layout3.html" target="_blank">DYNAMIC</a></li>
                     </ul>
             </nav>
@@ -24,7 +24,7 @@
             </ul>
         </aside>
         <main class="wrappwr">
-            <section class=" boxs01">
+            <section class="boxs01">
                 <div class="box1"></div>
                 <div class="box1"></div>
                 <div class="box1"></div>
