--- a/exercises/ex3/layout3.html
+++ b/exercises/ex3/layout3.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" type="text/css" href="includes/style.css">
         <title>Or Eitan</title>
     </head>
@@ -8,20 +9,22 @@
         <header>
             <a class="blackbutton" onClick="creategambox()"></a>
         </header>
-        <aside class="menu">
-            <nav>
-                <ul>
-                    <li><a href="index.html" target="_blank">MIX</a></li>
-                    <li><a href="layout2.html" target="_blank">STAIRS</a></li>
-                    <li><a href="layout3.html" target="_blank">DYNAMIC</a></li>
-                </ul>
-            </nav>
-        </aside>
-        <aside class="green"></aside>
-        <main>
-            <section id="js-gamebox"></section>
-        </main>
-        <div class="clear"></div>
+        <div class="flex">
+            <aside class="menu">
+                <nav>
+                    <ul>
+                        <li><a href="index.html" target="_blank">MIX</a></li>
+                        <li><a href="layout2.html" target="_blank">STAIRS</a></li>
+                        <li class="selectB"><a href="layout3.html" target="_blank">DYNAMIC</a></li>
+                    </ul>
+                </nav>
+            </aside>
+            <main>
+                <section id="js-gamebox"></section>
+            </main>
+            <aside class="green"></aside>
+            <div class="clear"></div>
+        </div>
         <section class="yellow"></section>
         <footer>
 
