--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
         <nav>
             <ul class="Mnav">
                 <li class="Mnav"><a class="Mnav" href="exercises/ex1/index.html" target="_blank">ex1</a></li>
-                <li class="Mnav"><a class="Mnav" href="#" target="_blank">ex3</a></li>
+                <li class="Mnav"><a class="Mnav" href="exercises/ex3/index.html" target="_blank">ex3</a></li>
                 <li class="Mnav"><a class="Mnav" href="#" target="_blank">ex4</a></li>
-                <li class="Mnav"><a class="Mnav" href="#" target="_blank">ex5</a></li>
-                <li class="Mnav"><a class="Mnav" href="#" target="_blank">ex6</a></li>
                 <li class="Mnav"><a class="Mnav" href="https://github.com/oreitan?tab=repositories" target="_blank">GitHub</a></li>
                 
             </ul>
