--- a/exercises/ex4/index.html
+++ b/exercises/ex4/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="includes/style.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <title>Or Eitan</title>
     </head>
     <body>
@@ -12,13 +13,98 @@
 
         <main>
             <form action="http://html5-book.co.il/teach/forms/get_form2.php" method="get"
-            autocomplete ="on">
+            autocomplete ="off">
             <label>
                 Enter name:
-                <input type="text" name="fullName" value="">
+                <input type="text" name="fullName" value="" placeholder="name">
             </label>
-            <input type="submit" value="Submit">
-           
+            <br>
+            <label>
+                Enter password:
+                <input type="password" name="pass" value="" placeholder="password" minlength="8">
+            </label>
+            <br>
+           <label>
+               Enter mail:
+                <input type="email" name="mail" value="" placeholder="Enter email">
+           </label>
+           <br>
+           <label>
+               Enter website:
+                <input type="url" name="website" value="">
+           </label>
+           <br>
+           <label>
+               Enter address:
+               <input type="texr" name="address" value="">
+           </label>
+           <br>
+           <label>
+               Enter phone:
+               <input type="text" name="phone" value="">
+           </label>
+           <br>
+           <label>
+               Enter tempator:
+               <input type="range" name="temper" value="" 
+               min="0" max="100">
+           </label>
+           <br>
+           <label>
+               Number of coffee a daye:
+               <input type="number" name="coffee" 
+               min="0" max="7">
+           </label>
+           <br>
+           <label>
+                Interests:
+                <br>
+                <label>
+                    <input type="checkbox" name="interests[]" value="traveling">
+                    traveling
+                </label>
+                <br>
+                <label>
+                    <input type="checkbox" name="interests[]" value="reading">
+                    reading
+                </label>
+                <br>
+                <label>
+                    <input type="checkbox" name="interests[]" value="fishing">
+                    fishing
+                </label>
+                <br>
+                <label>
+                    <input type="checkbox" name="interests[]" value="extreme sports">
+                    extreme sports
+                </label>
+            </label>
+            <br>
+            <label>
+                Gender:
+                <label>
+                    <input type="radio" name="gender" value="male">
+                    Male
+                </label>
+                <label>
+                    <input type="radio" name="gender" value="female">
+                    Female
+                </label>
+            </label>
+            <br>
+            <label>
+                Age:
+                <select class="custom-select" name="age">
+                    <option value="16">16</option>
+                    <option value="17">17</option>
+                    <option value="18">18</option>
+                    <option value="19">19</option>
+                    <option value="20">20</option>
+                    <option value="+20">+20</option>
+                </select>
+            </label>
+            <br>
+           <input type="submit" value="Submit">
 
             </form>
         </main>
@@ -27,4 +113,7 @@
         </footer>
     </body>
     <script src="includes/scripts.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </html>
