--- a/exercises/ex4/login2/login2.html
+++ b/exercises/ex4/login2/login2.html
@@ -12,7 +12,7 @@
         </header>
 
         <main>
-            <form action="login_s.php" method="get"
+            <form action="login2.php" method="get"
             autocomplete ="on">
             <h1>Log in</h1>
             <label>
